--- a/src/components/BaseLayout.astro
+++ b/src/components/BaseLayout.astro
@@ -75,7 +75,7 @@ const fullImage = new URL(image, siteUrl);
   <meta name="twitter:creator" content="@lasercutpro" />
   
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <link rel="icon" type="image/webp" href="/images/logo.webp" />
+  <link rel="icon" type="image/webp" href="images/logo.webp" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   
   <link rel="preload" href="hero-laser.webp" as="image" type="image/webp" />
