--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,7 +95,7 @@ const reviewSchema = generateReviewSchema(TESTIMONIALS);
                   <span>Konsultasi Gratis via WA</span>
                 </a>
                 
-                <a href={`${service.slug}/`} class="btn-secondary text-sm px-4 py-2 w-full text-center">
+                <a href={`/rajacuttinglaser/${service.slug}/`} class="btn-secondary text-sm px-4 py-2 w-full text-center">
   Detail Layanan
 </a>
               </div>
@@ -148,7 +148,7 @@ const reviewSchema = generateReviewSchema(TESTIMONIALS);
                 </div>
               </div>
               
-              <a href={`${material.slug}/`} class="btn-secondary text-sm px-4 py-2 w-full text-center">
+              <a href={`/rajacuttinglaser/${material.slug}/`} class="btn-secondary text-sm px-4 py-2 w-full text-center">
   Lihat Detail
 </a>
             </div>
